--- a/app/src/main/res/layout/fragment_decision.xml
+++ b/app/src/main/res/layout/fragment_decision.xml
@@ -36,17 +36,17 @@
                 android:layout_below="@id/tv"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="80dp"
-                android:text="Yes" />
+                android:text="@string/delete" />
 
             <Button
                 android:id="@+id/btn_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv"
-                android:layout_marginEnd="80dp"
                 android:layout_alignParentEnd="true"
+                android:layout_marginEnd="80dp"
                 android:backgroundTint="@color/salmon"
-                android:text="No" />
+                android:text="@string/cancel" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
