--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,10 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ChallengeCH5" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/pewter</item>
+        <item name="colorPrimary">@color/pewter</item>
         <item name="colorOnSecondary">@color/sand</item>
     </style>
 
+    <!--  Custom Theme  -->
     <style name="Theme.ChallengeCH5" parent="Base.Theme.ChallengeCH5" />
 </resources>
